fix side menu on mobile

--- a/style.css
+++ b/style.css
@@ -16,6 +16,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
 
+  flex-shrink: 0;
+
   background-color: rgba(40, 40, 40, 1.0);
   color: rgba(240, 240, 240, 1.0);
   font-family: 'Raleway', Helvetica, Arial, sans-serif;
@@ -27,10 +29,12 @@ body {
   line-height: 2;
 }
 
-.menu-items>a {
+.menu a {
   color: rgba(240, 240, 240, 1.0);
   text-decoration: none;
 }
+
+.menu a:hover { text-decoration: underline; }
 
 .menu>.address {
   line-height: 1.5;
@@ -44,11 +48,12 @@ body {
 }
 
 .menu-open {
-  width: 35em;
+  width: 12em;
   padding: 9px;
 }
 
 .hamburger {
+  color: rgba(10, 30, 70, 0.95);
   position: absolute;
   margin-top: 10px;
   margin-left: 10px;
@@ -56,12 +61,13 @@ body {
 }
 
 .hamburger:hover {
-  color: rgba(80, 80, 80, 1.0);
+  color: rgba(10, 30, 70, 0.5);
 }
 
 .content-pane {
   height: 100%;
   width: 100%;
+  flex-shrink: 1;
 }
 
 .content {
